Fixed initial flicker of padding when editing a field group

--- a/css/field-group.css
+++ b/css/field-group.css
@@ -65,6 +65,10 @@
 *
 *---------------------------------------------------------------------------------------------*/
 
+#acf-field-group-fields {
+	padding: 0;
+}
+
 #acf-field-group-fields > .handlediv,
 #acf-field-group-fields > .hndle {
 	display: none;
